--- a/src/mpi-pi-calculation/CMakeLists.txt
+++ b/src/mpi-pi-calculation/CMakeLists.txt
@@ -21,6 +21,7 @@ pkg_check_modules(gmpxx REQUIRED IMPORTED_TARGET gmpxx)
 
 find_package(my-benchmark REQUIRED)
 find_package(my-mpi REQUIRED)
+find_package(my-pi-helpers REQUIRED)
 
 add_executable(${PROJECT_NAME} src/main.cpp)
 
@@ -28,5 +29,6 @@ target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE my::benchmark)
 target_link_libraries(${PROJECT_NAME} PRIVATE my::mpi)
+target_link_libraries(${PROJECT_NAME} PRIVATE my::pi-helpers)
 target_link_libraries(${PROJECT_NAME} PRIVATE PkgConfig::mpi)
 target_link_libraries(${PROJECT_NAME} PRIVATE PkgConfig::gmpxx)
